# edpr-vojext

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_server  README.md  app_yarp-glhpe.xml  docker-compose.yaml  docker-compose_robot.yaml  docker-compose_server.yaml  edpr-vojext-demo.cpp  movenet_vojext.py  requirements.txt  run_vojext.sh  start-robot.sh  start_robot.sh  start_server.sh  start_vojext.sh  stop_vojext.sh
P_matrices/: Calibration_markers_2D.csv  Calibration_markers_3D.csv
experimenting/dataset/: dataset.py  factory.py
experimenting/dataset/core/: base.py  dhp19core.py
experimenting/utils/: skeleton_helpers.py  visualization.py
opexp/: CMakeLists.txt  batch2.sh  copy_datasets.py  h36m_trueframes.sh  op_batch.sh  openpose-evaluation.cpp  restruct_rgb.sh
scripts/: Write_csv_from_events.sh  annotate_rgb.py  convert_from_binary.py  create_eros.sh  event-to-skeleton.py  event_to_eros.py  video_with_movenet.sh  write_csv.py
sim_sem_msgs/: NC_humanPose.h  NChumanPose.h  NChumanPose.msg
skel_vis/: CMakeLists.txt  README.md  package.xml
skel_vis/msg/: NChumanPose.msg
skel_vis/scripts/: start_vis.py
vojext_msgs/: NC_humanPose.h
